--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Aleksandrs Portfolio</title>
+		<link rel="icon" type="image/png" href="images/imageedit_1_6887429822-removebg-preview.png"/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,13 +20,14 @@
 				<div class="top">
 
 					<!-- Logo -->
+						
 						<div id="logo">
-							<br>
-							<br>
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+						</div>
+						<div id="logo">
 							<h1 id="title">Aleksandrs Semjonovs</h1>
 							<p>Junior Game designer, Scripter</p>
-						</div>
+						</div>	
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -34,6 +36,7 @@
 								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
+								<li><a href="Resume.pdf" id="resume-link"><span class="icon solid fa-envelope">Resume</span></a></li>
 							</ul>
 						</nav>
 
@@ -44,9 +47,10 @@
 					<!-- Social Icons -->
 						<ul class="icons">
 							<li><a href="https://linkedin.com/in/aleksandrssemj" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://t.me/mrbronchik" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
-							<!-- <li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li> -->
+							<li><a href="https://github.com/MrBronchik" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://mrbronchik.itch.io" class="icon brands fa-itch-io"><span class="label">Github</span></a></li>
 							<li><a href="https://discord.com/users/:mrbronchik" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+							<li><a href="https://t.me/mrbronchik" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
 							<li><a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&to=sasha.mrbronchik@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
@@ -87,43 +91,25 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://mrbronchik.itch.io/snotes" class="image fit"><img src="images/Snotes/Icon.png" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>Street music rhythm game with timing challenges, dynamic events, and endless melodies.</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="https://mrbronchik.itch.io/instuctions" class="image fit"><img src="images/Instructions/logo.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>3D-guided, step-by-step furniture assembly with QR-scan, interactive controls, and saved assembly history.</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="https://mrbronchik.itch.io/combination" class="image fit"><img src="images/Combination/Logo.png" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
-											<h3>Orci Convallis</h3>
+											<h3>The app helps you to understand a certain aspect of combinatorics using life situations as an example.</h3>
 										</header>
 									</article>
 								</div>
@@ -140,14 +126,15 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/ezgif-5-075cbc28ea-ezgif.com-reverse.gif" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p> I’m a Junior Game Designer with a passion for creating immersive and engaging experiences. 
+							I've had the chance to work on a variety of game projects, taking on roles as a level designer, 
+							UI/UX designer, and gameplay mechanic developer. My toolkit includes Unity and Unreal Engine, 
+							where I bring ideas to life through thoughtful design, attention to detail, and a player-focused 
+							approach. I’m always looking to refine my skills, experiment with new ideas, and collaborate on 
+							exciting projects. Feel free to check out my work here, and let’s connect if you’d like to create 
+							something awesome together!</p>
 
 						</div>
 					</section>
@@ -160,17 +147,21 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>
+								Got questions, feedback, or just want to connect? I’d love to hear from you! Whether you’re 
+								interested in collaborating, sharing ideas, or just discussing games, feel free to reach out. 
+								You can contact me directly through email. Let’s make something amazing together!</p>
 
-							<form method="post" action="https://formspree.io/f/xanwreev">
+							<form method="post" action="https://formspree.io/f/xanwreev" onsubmit="return validateForm()">
 								<div class="row">
-									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
+									<div class="col-6 col-12-mobile">
+										<input type="text" id="name" name="name" placeholder="Name" />
+									</div>
+									<div class="col-6 col-12-mobile">
+										<input type="text" id="email" name="email" placeholder="Email" />
+									</div>
 									<div class="col-12">
-										<textarea name="message" placeholder="Message"></textarea>
+										<textarea id="message" name="message" placeholder="Message"></textarea>
 									</div>
 									<div class="col-12">
 										<input type="submit" value="Send Message" />
@@ -183,17 +174,43 @@
 
 			</div>
 
-		<!-- Footer -->
-			<div id="footer">
-
-				<!-- Copyright -->
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-
-			</div>
-
 		<!-- Scripts -->
+			<script>
+				function checkFields() {
+					let nameInput = document.getElementById('name');
+					let emailInput = document.getElementById('email');
+					let submitInput = document.getElementById('submit');
+			
+					if (nameInput.value.trim() !== "" && emailInput.value.trim() !== "") {
+						submitInput.disabled = false;
+					} else {
+						submitInput.disabled = true;
+					}
+				}
+			
+				function validateForm() {
+					let isValid = true;
+					let nameInput = document.getElementById('name');
+					let emailInput = document.getElementById('email');
+			
+					if (nameInput.value.trim() === "") {
+						nameInput.style.borderColor = "red";
+						isValid = false;
+					} else {
+						nameInput.style.borderColor = "";
+					}
+			
+					if (emailInput.value.trim() === "") {
+						emailInput.style.borderColor = "red";
+						isValid = false;
+					} else {
+						emailInput.style.borderColor = "";
+					}
+			
+					return isValid;
+				}
+			</script>
+
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
